# parsing_task_4

./: CMakeLists.txt  Makefile  README.md  example.txt
grammar/: Grammar.g4
grammar/.antlr/: Grammar.interp  Grammar.tokens  GrammarLexer.interp  GrammarLexer.java  GrammarParser.java
src/: Base.cpp  Base.hpp  Grammar.cpp  Grammar.hpp  NonTerminal.cpp  NonTerminal.hpp  Terminal.cpp  Terminal.hpp  Tools.hpp  main.cpp
task/: Makefile  grammarVar.txt  lexer.cpp  lexer.hpp  main  main.cpp  parser.cpp  parser.hpp
test/: lexer.cpp  lexer.hpp  main  main.cpp  parser.cpp  parser.hpp
